--- a/UnitTests/CMakeLists.txt
+++ b/UnitTests/CMakeLists.txt
@@ -17,6 +17,18 @@
 
 #find_package(GTest REQUIRED)
 
+FetchContent_Declare(
+	gtest
+	GIT_REPOSITORY https://github.com/google/googletest.git
+	GIT_TAG release-1.10.0
+)
+ 
+FetchContent_GetProperties(gtest)
+if(NOT gtest_POPULATED)
+	FetchContent_Populate(gtest)
+	add_subdirectory(${gtest_SOURCE_DIR} ${gtest_BINARY_DIR} EXCLUDE_FROM_ALL)
+endif()
+
 file(GLOB OpenInfraPlatform_UnitTests_Source *.cpp)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Import/IFC2X3)
