--- a/ExpressBindingGenerator/CMakeLists.txt
+++ b/ExpressBindingGenerator/CMakeLists.txt
@@ -105,7 +105,7 @@ endmacro()
 add_format(IFC2X3 			IFC2X3_TC1 		OFF)
 add_format(IFC4 			IFC4_ADD1 		OFF)
 add_format(IFC4X2_BIM4ROAD 	IFC4x2_BIM4ROAD	OFF)
-add_format(IFC4X1		 	IFC4x1_RC3		ON)
+add_format(IFC4X1		 	IFC4x1_RC3		OFF)
 add_format(IFC4X2_DRAFT_1 	IFC4x2_DRAFT_1	OFF)
 add_format(IFC4X2			IFC4x2			ON)
 
